fixed OrderForm layout issues

--- a/src/components/OrderForm/style.scss
+++ b/src/components/OrderForm/style.scss
@@ -412,7 +412,7 @@
   left: 0;
   background: $background-color;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 10px);
   user-select: none;
 
   &:hover:not(.nohover) {
@@ -684,15 +684,5 @@
       font-size: 14px;
       font-weight: 600;
     }
-  }
-}
-
-.hfui-orderform__question-btn {
-  font-size: 18px;
-  color: $text-color;
-  padding: 3px 7px;
-
-  &:hover {
-    cursor: pointer;
   }
 }
