--- a/src/ui/Panel/style.scss
+++ b/src/ui/Panel/style.scss
@@ -203,7 +203,7 @@
     line-height: 32px;
   }
 
-  i {
+  i, span {
     display: flex;
     justify-content: center;
     align-items: center;
